fix(reader-activation): checkbox alignment (#2057)

--- a/assets/reader-activation/auth.scss
+++ b/assets/reader-activation/auth.scss
@@ -380,7 +380,10 @@
 		}
 
 		&__checkbox {
+			align-items: center;
+			display: flex;
 			flex: 0 0 auto;
+			height: 1.6em;
 			margin: 0 0.5rem 0 0;
 		}
 
